force-app/main/default/objects/Intake__c/Intake__c.object-meta.xml
<CustomObject>
    <label>Intake</label>
    <nameField>
        <displayFormat>IN-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Intake No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>