force-app/main/default/objects/Intake__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>address school information</description>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>