force-app/main/default/objects/Intake__c/fields/Age_of_First_Hearing_Screening__c.field-meta.xml
<CustomField>
    <fullName>Age_of_First_Hearing_Screening__c</fullName>
    <label>Age of First Hearing Screening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>