force-app/main/default/objects/Intake__c/fields/Age_Onset__c.field-meta.xml
<CustomField>
    <fullName>Age_Onset__c</fullName>
    <label>Age Onset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>