force-app/main/default/objects/Intake__c/fields/Any_Other_ALDs__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_ALDs__c</fullName>
    <label>Any Other ALDs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>