force-app/main/default/objects/Intake__c/fields/Approver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approver_Reason__c</fullName>
    <label>Approver Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>