force-app/main/default/objects/Intake__c/fields/Approver_Referral_URL__c.field-meta.xml
<CustomField>
    <fullName>Approver_Referral_URL__c</fullName>
    <formula>IF(NOT(ISBLANK(Approver_Email__c)),$Label.Landing_URL +&quot;verification?id=&quot;+Enquiry_No__c +&quot;&amp;src=referral-iss&amp;role=approver&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Referral URL</label>
    <type>Text</type>
</CustomField>