force-app/main/default/objects/Intake__c/fields/Assesment__c.field-meta.xml
<CustomField>
    <fullName>Assesment__c</fullName>
    <label>Assesment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>