force-app/main/default/objects/Intake__c/fields/Audiogram_File__c.field-meta.xml
<CustomField>
    <fullName>Audiogram_File__c</fullName>
    <description>Audiogram file stored in AWS S3 bucket</description>
    <label>Audiogram File</label>
    <type>Url</type>
</CustomField>