force-app/main/default/objects/Intake__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Management</label>
    <type>Checkbox</type>
</CustomField>