force-app/main/default/objects/Intake__c/fields/Cause_of_Hearing_Loss__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Hearing_Loss__c</fullName>
    <label>Cause of Hearing Loss</label>
    <length>50</length>
    <type>Text</type>
</CustomField>