force-app/main/default/objects/Intake__c/fields/Child_s_Communication__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Communication__c</fullName>
    <label>Child&apos;s Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Sign Language</fullName>
            </value>
            <value>
                <fullName>Gestures</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>