force-app/main/default/objects/Intake__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake</relationshipLabel>
    <relationshipName>Intake</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>