force-app/main/default/objects/Intake__c/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <description>contact fax school information</description>
    <label>Contact Fax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>