force-app/main/default/objects/Intake__c/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <description>contact mobile school infomation</description>
    <label>Contact Mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>