force-app/main/default/objects/Intake__c/fields/Contact_Office__c.field-meta.xml
<CustomField>
    <fullName>Contact_Office__c</fullName>
    <description>contact office school information</description>
    <label>Contact Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>