force-app/main/default/objects/Intake__c/fields/Counselling__c.field-meta.xml
<CustomField>
    <fullName>Counselling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counselling</label>
    <type>Checkbox</type>
</CustomField>