force-app/main/default/objects/Intake__c/fields/Current_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Current_Follow_up__c</fullName>
    <description>Current Follow-up (Doctor / Hospital)</description>
    <inlineHelpText>Current Follow-up (Doctor / Hospital)</inlineHelpText>
    <label>Current Follow-up</label>
    <length>50</length>
    <type>Text</type>
</CustomField>