force-app/main/default/objects/Intake__c/fields/Data_Time_of_Assesment__c.field-meta.xml
<CustomField>
    <fullName>Data_Time_of_Assesment__c</fullName>
    <label>Data / Time of Assesment</label>
    <type>DateTime</type>
</CustomField>