force-app/main/default/objects/Intake__c/fields/Doctor_Memo_File__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Memo_File__c</fullName>
    <description>Doctor’s memo certifying student’s hearing loss file stored in AWS S3 bucket</description>
    <label>Doctor Memo File</label>
    <type>Url</type>
</CustomField>