force-app/main/default/objects/Intake__c/fields/Duration_Month__c.field-meta.xml
<CustomField>
    <fullName>Duration_Month__c</fullName>
    <label>Duration (Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>