force-app/main/default/objects/Intake__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>email school information</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>