force-app/main/default/objects/Intake__c/fields/Employment_Support__c.field-meta.xml
<CustomField>
    <fullName>Employment_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if this is Employment support</inlineHelpText>
    <label>Employment Support</label>
    <type>Checkbox</type>
</CustomField>