force-app/main/default/objects/Intake__c/fields/Enquiry_No__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry No.</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Intake</relationshipLabel>
    <relationshipName>Intake</relationshipName>
    <type>Lookup</type>
</CustomField>