force-app/main/default/objects/Intake__c/fields/Family_s_Home_Language__c.field-meta.xml
<CustomField>
    <fullName>Family_s_Home_Language__c</fullName>
    <label>Family&apos;s Home Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>