force-app/main/default/objects/Intake__c/fields/Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If financial assistance is required please choose the type when known</inlineHelpText>
    <label>Financial Assistance</label>
    <type>Checkbox</type>
</CustomField>