force-app/main/default/objects/Intake__c/fields/Genogram__c.field-meta.xml
<CustomField>
    <fullName>Genogram__c</fullName>
    <description>Genogram (Include relationship lines)</description>
    <inlineHelpText>Genogram (Include relationship lines)</inlineHelpText>
    <label>Genogram</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>