force-app/main/default/objects/Intake__c/fields/Hearing_Aid_s_First_Worn__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Aid_s_First_Worn__c</fullName>
    <label>Hearing Aid(s) First Worn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>