force-app/main/default/objects/Intake__c/fields/Hearing_lost_left_ear__c.field-meta.xml
<CustomField>
    <fullName>Hearing_lost_left_ear__c</fullName>
    <label>Hearing Lost - Left Ear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>normal</fullName>
            </value>
            <value>
                <fullName>mild</fullName>
            </value>
            <value>
                <fullName>moderate</fullName>
            </value>
            <value>
                <fullName>profound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>