force-app/main/default/objects/Intake__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <label>Intake Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Started</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Proceed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>