force-app/main/default/objects/Intake__c/fields/isUnderDebt__c.field-meta.xml
<CustomField>
    <fullName>isUnderDebt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnderDebt</label>
    <type>Checkbox</type>
</CustomField>