force-app/main/default/objects/Intake__c/fields/isUnderLoan__c.field-meta.xml
<CustomField>
    <fullName>isUnderLoan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnderLoan</label>
    <type>Checkbox</type>
</CustomField>