force-app/main/default/objects/Intake__c/fields/Latest_Semester_Slip_File__c.field-meta.xml
<CustomField>
    <fullName>Latest_Semester_Slip_File__c</fullName>
    <description>Latest Semester Slip file stored in AWS S3 bucket</description>
    <label>Latest Semester Slip File</label>
    <type>Url</type>
</CustomField>