force-app/main/default/objects/Intake__c/fields/Learning_Support__c.field-meta.xml
<CustomField>
    <fullName>Learning_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Learning Support</label>
    <type>Checkbox</type>
</CustomField>