force-app/main/default/objects/Intake__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of Student</description>
    <inlineHelpText>Name of Student</inlineHelpText>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>