force-app/main/default/objects/Intake__c/fields/Other_Developmental_Delay__c.field-meta.xml
<CustomField>
    <fullName>Other_Developmental_Delay__c</fullName>
    <label>Other Developmental Delay</label>
    <length>50</length>
    <type>Text</type>
</CustomField>