force-app/main/default/objects/Intake__c/fields/Other_Medical_Assessment_File__c.field-meta.xml
<CustomField>
    <fullName>Other_Medical_Assessment_File__c</fullName>
    <description>Other medical and/or psychological assessments file stored in AWS S3 bucket</description>
    <label>Other Medical Assessment File</label>
    <type>Url</type>
</CustomField>