force-app/main/default/objects/Intake__c/fields/Other_Medical_Conditions_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>Other_Medical_Conditions_Surgeries__c</fullName>
    <label>Other Medical Conditions /Surgeries</label>
    <length>50</length>
    <type>Text</type>
</CustomField>