force-app/main/default/objects/Intake__c/fields/Others_Child_s_Communication__c.field-meta.xml
<CustomField>
    <fullName>Others_Child_s_Communication__c</fullName>
    <description>Others Child&apos;s Preferred of Communication</description>
    <inlineHelpText>Others Child&apos;s Preferred of Communication</inlineHelpText>
    <label>Others Child&apos;s Communication</label>
    <length>50</length>
    <type>Text</type>
</CustomField>