force-app/main/default/objects/Intake__c/fields/Others_Notes__c.field-meta.xml
<CustomField>
    <fullName>Others_Notes__c</fullName>
    <description>Others Notes (relationship, parenting styles, home support, etc)</description>
    <inlineHelpText>Others Notes (relationship, parenting styles, home support, etc)</inlineHelpText>
    <label>Others Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>