force-app/main/default/objects/Intake__c/fields/Others_Therapy_Received__c.field-meta.xml
<CustomField>
    <fullName>Others_Therapy_Received__c</fullName>
    <label>Others Therapy Received</label>
    <length>50</length>
    <type>Text</type>
</CustomField>