force-app/main/default/objects/Intake__c/fields/Parent_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Parent_Consent_Form__c</fullName>
    <description>parent consent form file in AWS S3 bucket</description>
    <label>Parent Consent From</label>
    <type>Url</type>
</CustomField>