force-app/main/default/objects/Intake__c/fields/Parents_Concern__c.field-meta.xml
<CustomField>
    <fullName>Parents_Concern__c</fullName>
    <label>Parents Concern</label>
    <length>50</length>
    <type>Text</type>
</CustomField>