force-app/main/default/objects/Intake__c/fields/Parents_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Parents_Expectations__c</fullName>
    <label>Parents Expectations</label>
    <length>50</length>
    <type>Text</type>
</CustomField>