force-app/main/default/objects/Intake__c/fields/Parents_Perception__c.field-meta.xml
<CustomField>
    <fullName>Parents_Perception__c</fullName>
    <description>Parents Perception of Hearing Loss</description>
    <inlineHelpText>Parents Perception of Hearing Loss</inlineHelpText>
    <label>Parents Perception</label>
    <length>50</length>
    <type>Text</type>
</CustomField>