force-app/main/default/objects/Intake__c/fields/Person_s_Involved__c.field-meta.xml
<CustomField>
    <fullName>Person_s_Involved__c</fullName>
    <label>Person(s) Involved</label>
    <length>50</length>
    <type>Text</type>
</CustomField>