force-app/main/default/objects/Intake__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>postal code school information</description>
    <label>Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>