force-app/main/default/objects/Intake__c/fields/Pupil_Address__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Address__c</fullName>
    <label>Pupil Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>