force-app/main/default/objects/Intake__c/fields/Pupil_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Citizenship__c</fullName>
    <label>Pupil Citizenship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>