force-app/main/default/objects/Intake__c/fields/Pupil_Class__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Class__c</fullName>
    <label>Pupil Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>