force-app/main/default/objects/Intake__c/fields/Pupil_Contact_Home__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Contact_Home__c</fullName>
    <label>Contact Home Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>