force-app/main/default/objects/Intake__c/fields/Pupil_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Contact_Mobile__c</fullName>
    <label>Contact Mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>