force-app/main/default/objects/Intake__c/fields/Pupil_Custom_Language__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Custom_Language__c</fullName>
    <label>Custom Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>