force-app/main/default/objects/Intake__c/fields/Pupil_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Date_of_Birth__c</fullName>
    <label>Pupil Date of Birth</label>
    <type>Date</type>
</CustomField>