force-app/main/default/objects/Intake__c/fields/Pupil_Email__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Email__c</fullName>
    <label>Pupil Email</label>
    <type>Email</type>
</CustomField>