force-app/main/default/objects/Intake__c/fields/Pupil_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Id_Number__c</fullName>
    <label>Pupil Id Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>