force-app/main/default/objects/Intake__c/fields/Pupil_Main_Language__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Main_Language__c</fullName>
    <label>Main Language Pupil</label>
    <length>50</length>
    <type>Text</type>
</CustomField>