force-app/main/default/objects/Intake__c/fields/Pupil_Name__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Name__c</fullName>
    <description>pupil name , pupil information</description>
    <label>Pupil Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>