force-app/main/default/objects/Intake__c/fields/Pupil_Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Other_Language__c</fullName>
    <label>Other Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>