force-app/main/default/objects/Intake__c/fields/Pupil_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Parent_Name__c</fullName>
    <label>Pupil Parent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>