force-app/main/default/objects/Intake__c/fields/Pupil_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Postal_Code__c</fullName>
    <label>Pupil Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>