force-app/main/default/objects/Intake__c/fields/Pupil_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Relationship__c</fullName>
    <label>Relationship With Pupil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>