force-app/main/default/objects/Intake__c/fields/Pupil_Sex__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Sex__c</fullName>
    <label>Pupil Sex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>