force-app/main/default/objects/Intake__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>