force-app/main/default/objects/Intake__c/fields/School_Level__c.field-meta.xml
<CustomField>
    <fullName>School_Level__c</fullName>
    <description>level of school in referral iss form</description>
    <label>School Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>