force-app/main/default/objects/Intake__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>name of school on referral iss form</description>
    <label>School Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>