force-app/main/default/objects/Intake__c/fields/State_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Agency_Name__c</fullName>
    <label>State Agency Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>