force-app/main/default/objects/Intake__c/fields/Therapy_Received__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Received__c</fullName>
    <label>Therapy Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Speech &amp; Language Therapy</fullName>
            </value>
            <value>
                <fullName>Auditory-Verbal Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Physiotherapy</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>