force-app/main/default/objects/Intake__c/fields/Total_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Household_Income__c</fullName>
    <description>Total Household Income (Gross)</description>
    <inlineHelpText>Total Household Income (Gross)</inlineHelpText>
    <label>Total Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $1000</fullName>
            </value>
            <value>
                <fullName>$1001 - $2000</fullName>
            </value>
            <value>
                <fullName>$2001 - $3000</fullName>
            </value>
            <value>
                <fullName>$3001 - $4000</fullName>
            </value>
            <value>
                <fullName>$4001 &amp; above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>