force-app/main/default/objects/Intake__c/fields/Verifier_Email__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Email__c</fullName>
    <label>Verifier Email</label>
    <type>Email</type>
</CustomField>