force-app/main/default/objects/Intake__c/fields/Verifier_Name__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Name__c</fullName>
    <label>Verifier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>