force-app/main/default/objects/Intake__c/fields/Verifier_Reason__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Reason__c</fullName>
    <label>Verifier Reason</label>
    <type>TextArea</type>
</CustomField>