force-app/main/default/objects/Intake__c/fields/Verifier_Referral_URL__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Referral_URL__c</fullName>
    <formula>IF(NOT(ISBLANK(Verifier_Email__c)),$Label.Landing_URL +&quot;verification?id=&quot;+Enquiry_No__c+&quot;&amp;src=referral-iss&amp;role=verifier&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verifier Referral URL</label>
    <type>Text</type>
</CustomField>