force-app/main/default/objects/Intake__c/recordTypes/Intake_CS.recordType-meta.xml
<RecordType>
    <fullName>Intake_CS</fullName>
    <active>true</active>
    <description>Thsi record type is for CS Intake</description>
    <label>Intake - CS</label>
</RecordType>