force-app/main/default/objects/Intake__c/recordTypes/Intake_ISS.recordType-meta.xml
<RecordType>
    <fullName>Intake_ISS</fullName>
    <active>true</active>
    <description>This record type is for ISS Intake</description>
    <label>Intake - ISS</label>
</RecordType>