force-app/main/default/objects/Intake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Time_of_Assesment__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Age_Onset__c</columns>
    <columns>Age_of_First_Hearing_Screening__c</columns>
    <columns>Assesment__c</columns>
    <columns>Financial_Assistance__c</columns>
    <columns>Hearing_lost_left_ear__c</columns>
    <columns>Hearing_lost_right_ear__c</columns>
    <columns>Intake_Status__c</columns>
    <columns>Duration_Month__c</columns>
    <columns>Enquiry_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>